2003-01-06  Vince Darley <vincentdarley@sourceforge.net>
	* library/ftpvfs.tcl: allow 'file mtime' to set the modified
	time of a file, if the ftp package supports it.
	
2002-12-24  Vince Darley <vincentdarley@sourceforge.net>
	* library/ftpvfs.tcl: set the 'size' element in stat calls.
	(Bug reported on comp.lang.tcl).
	* library/vfsUtils.tcl: added '.kit' to the set of extensions
	which vfs::auto will recognise for auto-mounting.
	
2002-10-30  Andreas Kupries  <andreask@activestate.com>

	* library/pkgIndex.tcl: Changed 'tcl_platform' to
	  '::tcl_platform'. Package index must not assume execution at
	  global level.

2002-10-19  Jean-Claude Wippler <jcw@equi4.com>

	* library/pkgIndex.tcl:
	* library/mk4vfs.tcl: merged 1.6 changes, periodic commit/flush

2002-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: add tclIndex to install

	* library/mk4vfs.tcl:
	* library/starkit.tcl:
	* library/vfsUtils.tcl:
	* library/vfslib.tcl:
	* library/webdavvfs.tcl: whitespace cleanup

	* library/pkgIndex.tcl: remove 8.4 alpha checks, use vfs::dll var
	to store library name.

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4:
	* configure:
	* configure.in: move the CFLAGS definition into TEA_ENABLE_SHARED
	and make it pick up the env CFLAGS at configure time.

2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in:               replace the ancient build system
	* README.cygwin:             with TEA 2002 build spec.
	* aclocal.m4:
	* config.guess (removed):
	* config.sub (removed):
	* configure:
	* configure.in:
	* install-sh (removed):
	* mkIndex.tcl.in (removed):
	* mkinstalldirs (removed):
	* tcl.m4 (removed):
	* tclconfig/README.txt (new):
	* tclconfig/install-sh (new):
	* tclconfig/tcl.m4 (new):
	* generic/vfs.c: changed BUILD_Vfs to BUILD_vfs

2002-09-10  Jean-Claude Wippler <jcw@equi4.com>
	* library/pkgIndex.tcl:	adjusted for two new packages,
	also fixed to use proper file name on unix (as shared lib)