@@ -1,3 +1,8 @@
+2003-01-14  Vince Darley <vincentdarley@sourceforge.net>
+	* library/tarvfs.tcl: new 'tar' filesystem courtesy of Stefan
+	Vogel -- many thanks!  The tar vfs is currently read-only and
+	doesn't support .tgz.
+	
 2003-01-06  Vince Darley <vincentdarley@sourceforge.net>
 	* library/ftpvfs.tcl: allow 'file mtime' to set the modified
 	time of a file, if the ftp package supports it.
